--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lint": "eslint src/**.ts --max-warnings=0",
     "watch": "npm run build && npm link && nodemon",
     "build": "rimraf ./dist && tsc",
-    "prepublishOnly": "npm run lint && npm run build"
+    "prepublishOnly": "npm run lint && npm run build",
+    "test": "jest"
   },
   "keywords": [
     "homebridge-plugin"
@@ -30,14 +31,19 @@
     "node-fetch": "^2.6.11"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/node": "^16.10.9",
     "@types/node-fetch": "^2.6.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
+    "express": "^5.1.0",
     "homebridge": "^1.3.5",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.20",
     "rimraf": "^3.0.2",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.3.4",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
   }
