chore: drop old Node support

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,8 @@ jobs:
     strategy:
       matrix:
         # the Node.js versions to build on
-        node-version: [12.x, 13.x, 14.x, 15.x, 16.x]
+        # Run on modern Node versions only
+        node-version: [18.x, 20.x, 22.x]
 
     steps:
       - uses: actions/checkout@v2
@@ -24,6 +25,9 @@ jobs:
 
       - name: Lint the project
         run: npm run lint
+
+      - name: Run unit tests
+        run: npm test
 
       - name: Build the project
         run: npm run build
