--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "https://github.com/johnanthonyeletto/homebridge-windmill-ac/issues"
   },
   "engines": {
-    "node": ">=14.18.1",
+    "node": ">=18.0.0",
     "homebridge": ">=1.3.5"
   },
   "main": "dist/accessory.js",
@@ -26,12 +26,9 @@
   "keywords": [
     "homebridge-plugin"
   ],
-  "dependencies": {
-    "node-fetch": "^2.6.11"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "^16.10.9",
-    "@types/node-fetch": "^2.6.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
