--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "https://github.com/johnanthonyeletto/homebridge-windmill-ac/issues"
   },
   "engines": {
-    "node": ">=18.0.0",
+    "node": "^18.15.0 || ^20.7.0 || ^22",
     "homebridge": ">=1.3.5"
   },
   "main": "dist/accessory.js",
@@ -27,18 +27,18 @@
     "homebridge-plugin"
   ],
   "dependencies": {
-    "node-fetch": "^2.6.11"
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0",
-    "@types/node-fetch": "^2.6.3",
+    "@types/node": "^24.0.0",
+    "@types/node-fetch": "^2.6.12",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
     "eslint": "^8.57.1",
-    "homebridge": "^1.3.5",
-    "nodemon": "^2.0.20",
-    "rimraf": "^3.0.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "homebridge": "^1.10.0",
+    "nodemon": "^3.1.10",
+    "rimraf": "^6.0.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
