--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lint": "eslint src/**.ts --max-warnings=0",
     "watch": "npm run build && npm link && nodemon",
     "build": "rimraf ./dist && tsc",
-    "prepublishOnly": "npm run lint && npm run build"
+    "prepublishOnly": "npm run lint && npm run build",
+    "test": "jest"
   },
   "keywords": [
     "homebridge-plugin"
@@ -30,14 +31,17 @@
     "node-fetch": "^2.7.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/node": "^24.0.0",
     "@types/node-fetch": "^2.6.12",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
     "eslint": "^8.57.1",
     "homebridge": "^1.10.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.10",
     "rimraf": "^6.0.1",
+    "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
