--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "https://github.com/johnanthonyeletto/homebridge-windmill-ac/issues"
   },
   "engines": {
-    "node": "^18.15.0 || ^20.7.0 || ^22",
+    "node": ">=22.0.0",
     "homebridge": ">=1.3.5"
   },
   "main": "dist/accessory.js",
